--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               
-              <a class="nav-link mytxt text-white" href="">HOME</a>
+              <a class="nav-link mytxt text-white" href="index.html">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mytxt text-white" href="#">ABOUT</a>
+              <a class="nav-link mytxt text-white" href="about.html">ABOUT</a>
             </li>
             <li class="nav-item">
               <a class="nav-link mytxt text-white" href="">SERVICES</a>
