--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a class="nav-link mytxt text-white" href="about.html">ABOUT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mytxt text-white" href="">SERVICES</a>
+              <a class="nav-link mytxt text-white" href="services.html">SERVICES</a>
             </li>
 
             <li class="nav-item ">
@@ -81,7 +81,7 @@
 
         <h2 class="mt-2">Explore the Colourful World</h2>
         <p class="mt-2 display-1">A WONDERFUL GIFT</p>
-        <div class="col-md-1 col-3"><hr style="background-color: purple;height: 5px ;"></div>
+        <div class="col-md-1 col-3"><hr style="background-color: purple;height: 5px ; border: none;"></div>
         <button class="btn btn-danger mt-2 rb"> LEARN MORE</button>
     </center>
 
@@ -116,7 +116,7 @@
         <center><div class="col-md-5"><h1>UPCOMING EVENTS</h1></div>
         <div class="col-md-3"></div>
 
-        <hr class=" col-md-1 col-2" style="height: 4px; background-color: purple;">
+        <hr class=" col-md-1 col-2" style="height: 4px; background-color: purple; border: none;">
         </center>
       </div>
     </div>
@@ -172,7 +172,7 @@
                       
                         <h3 class="mt-md-5">EXPLORE THE WORLD</h3>
 
-              <hr class=" col-md-2 col-2 text-center" style="height: 6px; background-color: purple;">
+              <hr class=" col-md-2 col-2 text-center" style="height: 5px; background-color: purple; border: none;">
   
                         <p class="mt-md-3">Diremit mundi mare undae nunc mixtam tanto sibi. Nubes unda concordi. <br> Fert his. Recessit mentes praecipites locum caligine sui egens erat. Silvas <br> caeli regna.</p>
             <div class="mt-5"></div>
