services page done new project page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </li>
 
             <li class="nav-item ">
-              <a class="nav-link mytxt text-white" href="#">PROJECTS</a>
+              <a class="nav-link mytxt text-white" href="project.html">PROJECTS</a>
             </li>
                
         
